<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>svea_vision</name>
  <version>0.0.0</version>
  <description>The svea vision package</description>
  <maintainer email="yunhaox@kth.se">Yunhao Xu</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>svea_core</depend>
  <depend>image_geometry</depend>
  <depend>aruco_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ros_numpy</depend>
  <depend>tf2_sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
