<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>svea_vision_msgs</name>
  <version>0.1.0</version>
  <description>The svea_vision_msgs package</description>
  <maintainer email="yunhaox@kth.se">Yunhao Xu</maintainer>
  <author email="kajarf@kth.se">Kaj Munhoz Arfvidss</author>
  <license>MIT</license>
  <url type="website">https://svea.eecs.kth.se</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
